k8s/apps/tripbot/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tripbot
spec:
  type: ClusterIP
  selector:
    app: tripbot
  ports:
    - name: http
      port: 8080
      targetPort: http
